--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <title>Frontend Mentor | Huddle landing page with curved sections</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+ 
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
@@ -87,6 +87,7 @@
   
     <p><i class="fas fa-phone-volume"></i>Phone: +1-543-123-4567</p>
     <p><i class="fas fa-envelope"></i>example@huddle.com</p>
+    <span><i class="fab fa-facebook-square"></i><i class="fab fa-instagram"></i><i class="fab fa-twitter-square"></i></span>
   </div>
   <div>
     <p class="news">Newsletter</p>
