--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <title>Frontend Mentor | Huddle landing page with curved sections</title>
 
- 
+  
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
@@ -19,7 +19,7 @@
 </head>
 <body> 
   <nav>
-    <img id="logo" src="./images/logo.svg"/>
+    <img class="logo" src="./images/logo.svg" alt="logo"/>
     <div><button class="btn tryIt">Try it free</button></div>
   </nav> 
   <section class="first">
@@ -32,15 +32,15 @@
   </section>
   <section class="second">
     <div class="mockups">
-      <img src="images/screen-mockups.svg"/>
+      <img src="images/screen-mockups.svg" alt="mockups"/>
     </div>
     <div class="communities">
-      <img  src="images/icon-communities.svg"/>
+      <img  src="images/icon-communities.svg" alt="icon-communities"/>
       <p>1.4k+</p>
       Communities Formed
     </div>
     <div class="messages">
-      <img  src="images/icon-messages.svg"/>
+      <img  src="images/icon-messages.svg" alt="icon-messages"/>
       <p>2.7m+</p>
       Messages Sent
     </div>
@@ -53,11 +53,11 @@
     </p>
   </div>
   <div class="images"> 
-    <img src="./images/illustration-grow-together.svg" >
+    <img src="./images/illustration-grow-together.svg" alt="grow-tohether" />
   </div>
 </section>
 <section class="fourth">
-  <div class="images"><img src="/images/illustration-flowing-conversation.svg"></div>
+  <div class="images"><img src="/images/illustration-flowing-conversation.svg" alt="flowing-conversation"/></div>
   <div>
   <h2>Flowing Conversations</h2>
   <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads have 
@@ -72,7 +72,7 @@
   once signed in to your app, your users can start chatting immediately.
 </p>
 </div>
-  <div class="images"><img src="/images/illustration-your-users.svg"></div>
+  <div class="images"><img src="/images/illustration-your-users.svg" alt="your-users"/></div>
 </section>
 <section class="sixth">
   
@@ -81,7 +81,7 @@
 </section>
 <footer>
   <div>
-    <img id="logo" src="./images/logo2.svg"/>
+    <img class="logo" src="./images/logo2.svg" alt="logo"/>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia 
       vestibulum a, ultrices quis sem.</p>
   
