--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body> 
   <nav>
     <img class="logo" src="./images/logo.svg" alt="logo"/>
-    <div><button class="btn tryIt">Try it free</button></div>
+    <button class="btn tryIt">Try it free</button>
   </nav> 
   <section class="first">
     <h1>Build The Community Your Fans Will Love</h1>
@@ -89,7 +89,7 @@
     <p><i class="fas fa-envelope"></i>example@huddle.com</p>
     <span><i class="fab fa-facebook-square"></i><i class="fab fa-instagram"></i><i class="fab fa-twitter-square"></i></span>
   </div>
-  <div>
+  <div class="newsletter">
     <p class="news">Newsletter</p>
     <p>To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never 
     send you spam or pass on your email address</p>
